Fix tab flow on mobile

--- a/resources/assets/sass/chart.scss
+++ b/resources/assets/sass/chart.scss
@@ -125,6 +125,7 @@ body {
 		margin-bottom: 0;
 		list-style-type: none;
 		text-transform: uppercase;
+		padding-left: 0;
 		/*border-bottom: 1px solid #ddd;
 		&:after {
 			content: " ";
